# uni-cs-pe

./: .gitignore  readme.md
02-programming-fundamentals/01-entry-test/: p1_eliaz_bobadilla.cpp  p4_eliaz_bobadilla.cpp
02-programming-fundamentals/02-firstpc-practice/23-2/: four.cpp
02-programming-fundamentals/02-firstpc-practice/cookie_pricing/: CMakeLists.txt
02-programming-fundamentals/02-firstpc-practice/cookie_pricing/src/: cookie_pricing.h
02-programming-fundamentals/02-firstpc-practice/cookie_pricing/tests/: cookie_pricing_test.cpp
02-programming-fundamentals/03-sorting-and-searching/: binarySearch.cpp  bubbleSort.cpp
11-extra/hackathons/01-hackemate/: readme.md
cpp/: fibonacci.cpp
cs-core/: readme.md
cs-core/02-programming-fundamentals/02-firstpc-practice/23-2/: third.cpp
cs-core/02-programming-fundamentals/02-firstpc-practice/recursion/: triangulos.cpp  triangulos.h
cs-core/02-programming-fundamentals/03-exam/third/: array.cpp  sorting.cpp  utils.h
cs-core/02-programming-fundamentals/03-sorting-and-searching/: insertionSort.cpp  mergeSort.ts  selectionSort.cpp
cs-core/02-programming-fundamentals/25-1/01-entry-test/: p3_eliaz_bobadilla.cpp
cs-core/02-programming-fundamentals/25-1/03-exam/: primer.cpp
cs-core/02_CC112/: readme.md
cs-core/02_CC112/2024-1/: readme.md
cs-core/02_CC112/2024-1/4PC-2025-1/: uno.cpp
cs-core/02_CC112/sorting-and-searching/: mergeSort.ts
cs-core/11-extra/cpp-scripting/: .gitignore  faster_finding_my_exam.cpp  find_pdf_redirect  find_pdf_redirect.cpp  readme.md  rename_files.cpp
sciences/: readme.md
(+53 files in other folders)
